<resources>
    <string name="app_name">visit sri lanka plases</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_salary">Enter salary</string>
    <string name="save_data">Save Data</string>
    <string name="insert_data">insert Data</string>
    <string name="visit_sri_lanka">visit sri lanka</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="VistSriLankaplacespage">Vist Sri Lanka places page</string>
    <string name="travelguideid">travel guide id</string>
    <string name="phone">phone</string>
    <string name="Enterphone">Enter Phone</string>
    <string name="Email">Enter Email</string>
    <string name="travelguideaddress">travel guide address</string>
    <string name="travelguidename">Travel Guide Name</string>
    <string name="Travelguidedetails">Travel Guide Details</string>
    <string name="InsertGuideData">Insert Guide Data</string>
    <string name="guidename">Guide Name</string>
    <string name="DispalyGuideData">Dispaly Guide\'s Details</string>
    <string name="Places">Places</string>
    <string name="Mirissa">Mirissa</string>
    <string name="yala">yala</string>
    <string name="Sridaladamaligawa">Sri Dalada Maligawa</string>
    <string name="NineArchBridge">Nine Arch Bridge</string>
    <string name="portcity">Port City</string>
    <string name="Sigiriya">Sigiriya</string>
    <string name="Search">Search</string>
    <string name="btnplaces">Places</string>
    <string name="Placestopic">Places</string>
    <string name="Guideid">Guide Id</string>
    <string name="Guidename">Guide Name</string>
    <string name="GuideAddress">Guide Address</string>
    <string name="Guidephone">Guide Phone Number</string>
    <string name="Guideemail">Guide Email</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="LoadingData">Loading Data.....</string>
    <string name="Sumit">Sumit</string>
    <string name="placedetails">place Details</string>
    <string name="EnterTopic">Enter Topic</string>
    <string name="Addpic">Add pic</string>
    <string name="writedescription">write a description</string>
    <string name="Gangaramayaseemamalakayatemple">Gangarama seemamalakaya temple</string>
    <string name="semmamalakaya">semmamalakaya</string>
    <string name="Visit" />
    <string name="travelguide">travelguide</string>
    <string name="Booking">Booking</string>
    <string name="dis">Seema Malaka is a Buddhist temple in Colombo, Sri Lanka. The temple is mainly used for meditation and rest, rather than for worship. Situated in the Beira Lake, the temple was originally constructed in the late 19th century.</string>
    <string name="visitn">Visit</string>
    <string name="Payment">Payment</string>
    <string name="paym">Pay</string>
    <string name="paymentnum">payment id</string>
    <string name="NumberofPerson">Numberof Person</string>
    <string name="km12">12KM</string>
    <string name="PAY">PAY</string>
    <string name="Cancel">Cancel</string>
    <string name="paycode">Payment Code - T065</string>
    <string name="km">Tharaveling Km - 12KM</string>
    <string name="NumberofPerson5">Number of Person - 5</string>
    <string name="paymentv">Payment Value - $150.00</string>
</resources>