<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceAddFormActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="412dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/hedin"
                        android:layout_width="413dp"
                        android:layout_height="163dp"
                        app:layout_constraintBottom_toTopOf="@+id/topic3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/topbaclground" />

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="24dp"
                        app:layout_constraintBottom_toBottomOf="@+id/hedin"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/logo02" />

                    <TextView
                        android:id="@+id/placedetails"
                        android:layout_width="218dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/placedetails"
                        android:textColor="@color/white"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/hedin"
                        app:layout_constraintEnd_toStartOf="@+id/logo"
                        app:layout_constraintHorizontal_bias="0.216"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.405" />

                    <EditText
                        android:id="@+id/topic"
                        android:layout_width="385dp"
                        android:layout_height="58dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/EnterTopic"
                        android:inputType="textPersonName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/topic3" />

                    <EditText
                        android:id="@+id/topic3"
                        android:layout_width="385dp"
                        android:layout_height="58dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/Addpic"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/hedin" />

                    <EditText
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="385dp"
                        android:layout_height="58dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/writedescription"
                        android:inputType="textPersonName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/topic" />

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="172dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/Sumit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>